Closed Bug 190766 Opened 23 years ago Closed 22 years ago

nsStackFrameUnix.cpp crashes on Solaris [@ write_address_file]

Categories

(Core :: XPCOM, defect)

Sun
Solaris
defect
Not set
critical

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

I built xpcom w/ tracerefcnt (my build config for solaris is lying around in some bug) and set XPCOM_MEM_REFCNT_LOG. I crashed in a call to fprintf. it turns out that fprintf in glibc doesn't use raw strlen to handle %s, but it does in solaris. this wouldn't be a problem if you never passed nil to fprintf, but unfortunately info.dli_sname is nil and causes tracerefcnt to crash.
Attached patch patchSplinter Review
Attachment #112731 - Flags: review?(dbaron)
This compiles on Solaris? I thought the code from which this was moved was built on Linux x86 and PPC only.
Severity: normal → critical
mozilla/xpcom/base/nsStackFrameUnix.cpp 1.11
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Crash Signature: [@ write_address_file]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: