Bug 190766 nsStackFrameUnix.cpp crashes on Solaris [@ write_address_file] r=dbaron